Bug 694196 - crash [@ MsgGetHeadersFromKeys(nsIMsgDatabase*, nsTArray<unsigned int, nsTArrayDefaultAllocator> const&, nsIMutableArray*) ]. r=rkent